@@ -250,11 +250,6 @@ sub _traverse_keyword_vocabulary ($self, $schema, $state) {
     if length($state->{schema_path});
 
   my $valid = 1;
-  $valid = E($state, '$vocabulary can only appear at the document root')
-    if length($state->{traversed_schema_path}.$state->{schema_path});
-
-  $valid = E($state, 'metaschemas must have an $id')
-    if not length $state->{initial_schema_uri};
 
   my @vocabulary_classes;
   foreach my $uri (sort keys $schema->{'$vocabulary'}->%*) {
@@ -301,6 +296,11 @@ sub __fetch_vocabulary_data ($self, $state, $schema_info) {
   }
 
   my $valid = 1;
+  $valid = E($state, '$vocabulary can only appear at the document root') if length $schema_info->{document_path};
+  $valid = E($state, 'metaschemas must have an $id') if not exists $schema_info->{schema}{'$id'};
+
+  return (undef, []) if not $valid;
+
   my @vocabulary_classes;
 
   foreach my $uri (sort keys $schema_info->{schema}{'$vocabulary'}->%*) {
